sytle[core]: 代码规范